--- a/Raytracer/Raytracer.vcxproj
+++ b/Raytracer/Raytracer.vcxproj
@@ -149,6 +149,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleLib\ConsoleLib.vcxproj">
+      <Project>{025a1406-606d-4a21-9700-53cf7f4641bf}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
