--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="source\math\TVec4.h" />
+    <ClInclude Include="source\math\Vector.h" />
     <ClInclude Include="source\utils\FpsTimer.h" />
+    <ClInclude Include="source\math\TVec3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\utils\FpsTimer.cpp" />
