--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="source\math\TVec4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\math\TRay3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\utils\FpsTimer.cpp">
