--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="source\math\TRay3.h" />
+    <ClInclude Include="source\math\TSphere.h" />
     <ClInclude Include="source\math\TVec4.h" />
     <ClInclude Include="source\math\Vector.h" />
     <ClInclude Include="source\utils\FpsTimer.h" />
