--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -145,13 +145,12 @@
     <ClInclude Include="source\math\TSphere.h" />
     <ClInclude Include="source\math\TVec4.h" />
     <ClInclude Include="source\math\Vector.h" />
+    <ClInclude Include="source\render\Camera.h" />
     <ClInclude Include="source\render\Framebuffer.h" />
     <ClInclude Include="source\utils\FpsTimer.h" />
     <ClInclude Include="source\math\TVec3.h" />
+    <ClInclude Include="source\utils\TDispatcher.h" />
     <ClInclude Include="source\window\Window.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="source\utils\FpsTimer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
