--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -141,14 +141,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="source\math\TRay3.h" />
-    <ClInclude Include="source\math\TSphere.h" />
-    <ClInclude Include="source\math\TVec4.h" />
+    <ClInclude Include="source\math\IHitable.h" />
+    <ClInclude Include="source\math\HitRecord.h" />
+    <ClInclude Include="source\math\Ray3.h" />
+    <ClInclude Include="source\math\Sphere.h" />
+    <ClInclude Include="source\math\Vec4.h" />
     <ClInclude Include="source\math\Vector.h" />
     <ClInclude Include="source\render\Camera.h" />
     <ClInclude Include="source\render\Framebuffer.h" />
     <ClInclude Include="source\utils\FpsTimer.h" />
-    <ClInclude Include="source\math\TVec3.h" />
+    <ClInclude Include="source\math\Vec3.h" />
     <ClInclude Include="source\utils\TDispatcher.h" />
     <ClInclude Include="source\window\Window.h" />
   </ItemGroup>
