--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -18,19 +18,19 @@
     <ClInclude Include="source\utils\FpsTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\math\TVec3.h">
+    <ClInclude Include="source\math\Vec3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\math\Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\math\TVec4.h">
+    <ClInclude Include="source\math\Vec4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\math\TRay3.h">
+    <ClInclude Include="source\math\Ray3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\math\TSphere.h">
+    <ClInclude Include="source\math\Sphere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\render\Framebuffer.h">
@@ -43,6 +43,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\utils\TDispatcher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\math\HitRecord.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\math\IHitable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
