--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -157,6 +157,9 @@
       <Project>{13cf642d-b8b8-480f-b920-27439ad877e1}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Application.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
