--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -102,6 +102,8 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\MainLayer.cpp" />
+    <ClCompile Include="src\MainLayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleLib\ConsoleLib.vcxproj">
