--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -22,10 +22,8 @@
     <ClInclude Include="src\Flame\math\Ray.h" />
     <ClInclude Include="src\Flame\math\Sphere.h" />
     <ClInclude Include="src\Flame\math\Triangle.h" />
-    <ClInclude Include="src\Flame\render\AlbedoMaterial.h" />
     <ClInclude Include="src\Flame\render\Framebuffer.h" />
-    <ClInclude Include="src\Flame\render\IMaterial.h" />
-    <ClInclude Include="src\Flame\render\LambertianMaterial.h" />
+    <ClInclude Include="src\Flame\render\Material.h" />
     <ClInclude Include="src\Flame\utils\EventDispatcher.h" />
     <ClInclude Include="src\Flame\utils\FunctionalDispatcher.h" />
     <ClInclude Include="src\Flame\utils\Random.h" />
